--- a/DotNetCore2UI/DotNetCore2UI.csproj
+++ b/DotNetCore2UI/DotNetCore2UI.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VendingMachineBusinessLogic\VendingMachineBusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
